--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,6 @@ services:
     volumes:
       - ./src/api/env.edn:/env.edn
 
-
   certbot:
     image: certbot/certbot
     restart: unless-stopped
@@ -25,7 +24,6 @@ services:
       - ./src/proxy/data/certbot/conf:/etc/letsencrypt
       - ./src/proxy/data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-
 
   nginx:
     image: nginx:1.15-alpine
@@ -39,9 +37,9 @@ services:
     networks:
       - apinet
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./src/proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./src/proxy/data/certbot/conf:/etc/letsencrypt
+      - ./src/proxy/data/certbot/www:/var/www/certbot
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
   mysql:
@@ -53,7 +51,7 @@ services:
     networks:
       - apinet
     volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ./src/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - mysql_db_data_container:/var/lib/mysql
 
   adminer:
