--- a/src/proxy/nginx.conf
+++ b/src/proxy/nginx.conf
@@ -34,7 +34,7 @@ http {
         # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
-            proxy_pass http://url-shortener:8888;
+            proxy_pass http://api:8888;
         }
 
         location /adminer {
