--- a/src/proxy/nginx.conf
+++ b/src/proxy/nginx.conf
@@ -34,6 +34,11 @@ http {
         # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'false';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            
             proxy_pass http://api:8888;
         }
 
