fixes path names

--- a/src/web/Dockerfile
+++ b/src/web/Dockerfile
@@ -3,6 +3,10 @@ FROM clojure:tools-deps AS builder
 
 COPY resources /resources
 
+COPY deps.edn .
+COPY dev.cljs.edn .
+COPY figwheel-main.edn .
+
 RUN clj -A:fig:min
 
 COPY target /target
