--- a/src/proxy/nginx.conf
+++ b/src/proxy/nginx.conf
@@ -30,10 +30,19 @@ http {
         ssl_certificate /etc/letsencrypt/live/ickl.ink/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/ickl.ink/privkey.pem;
         
-        # include /etc/letsencrypt/options-ssl-nginx.conf;
-        # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'false';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            
+            proxy_pass http://web;
+        }
+
+        location /api {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Credentials' 'false';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
