--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
         script: |
           cd ~/icklink
           git pull
-          docker-compose build --no-cache && docker compose up -d 
+          docker-compose build --no-cache && docker compose up -d --force-recreate
