--- a/src/proxy/nginx.conf
+++ b/src/proxy/nginx.conf
@@ -39,6 +39,12 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             
+            add_header Last-Modified $date_gmt;
+            add_header Cache-Control 'no-store, no-cache';
+            if_modified_since off;
+            expires off;
+            etag off;
+
             proxy_pass http://web;
         }
 
@@ -48,6 +54,12 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             
+            add_header Last-Modified $date_gmt;
+            add_header Cache-Control 'no-store, no-cache';
+            if_modified_since off;
+            expires off;
+            etag off;
+
             proxy_pass http://api:8888;
         }
 
