--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
         script: |
           cd ~/icklink
           git pull
-          docker compose build && docker compose up -d --force-recreate
+          docker compose up -d --build --force-recreate
