fixes some things

--- a/src/proxy/nginx.conf
+++ b/src/proxy/nginx.conf
@@ -63,6 +63,21 @@ http {
             proxy_pass http://api:8888;
         }
 
+        location ~ /*/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'false';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            
+            add_header Last-Modified $date_gmt;
+            add_header Cache-Control 'no-store, no-cache';
+            if_modified_since off;
+            expires off;
+            etag off;
+
+            proxy_pass http://api:8888;
+        }
+
         location /adminer {
             proxy_pass http://adminer:8080;
         }
